--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -7,7 +7,7 @@
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
+        Title="Azure Monitor"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
