--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -11,11 +11,11 @@
         <Image
                 Source="dotnet_bot.png"
                 SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="100"
+                HeightRequest="150"
                 HorizontalOptions="Center" />
-
         <Button
-                Text="Load CPU"
+                FontSize="Large"
+                Text="Start Monitor"
                 Clicked="Button_Clicked"/>
 
     </StackLayout>
